# veditor

./: Cargo.toml  LICENSE  README.md
src/: app.rs  audio.rs  codex.rs  main.rs  persistence.rs  preview.rs  project.rs  pty.rs  render.rs  theme.rs
