[package]
name = "veditor"
version = "0.1.0"
description = "A low level addictive code editor"
authors = ["VedPanse <panse.ved@yandex.com>"]
license = "MIT"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.29.0"
portable-pty = "0.9.0"
ratatui = "0.30.0"
vt100 = "0.16.2"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
